if (CMAKE_BUILD_TYPE STREQUAL "COVERAGE")
	setup_target_for_coverage("${PROJECT_NAME}_coverage" "ctest" coverage)
endif()

add_compile_definitions(TEST_GLOBALS)

add_subdirectory(BlockTypeRegistry)
add_subdirectory(BoundingBox)
add_subdirectory(ByteBuffer)
add_subdirectory(ChunkData)
add_subdirectory(CompositeChat)
add_subdirectory(FastRandom)
add_subdirectory(Generating)
add_subdirectory(HTTP)
add_subdirectory(LuaThreadStress)
add_subdirectory(Network)
add_subdirectory(OSSupport)
add_subdirectory(SchematicFileSerializer)
add_subdirectory(UUID)
add_subdirectory(WorldStorage)
